--- a/admin/view/template/extension/payment/clickpay_view.twig
+++ b/admin/view/template/extension/payment/clickpay_view.twig
@@ -2,18 +2,18 @@
 <div id="content">
 	<div class="page-header">
 		<div class="container-fluid">
-			<div class="pull-right">
-				<button type="submit" form="form-payment" data-toggle="tooltip" title="{{ button_save }}" class="btn btn-primary">
-					<i class="fa fa-save"></i>
+			<div class="float-end">
+				<button type="submit" form="form-payment" data-bs-toggle="tooltip" title="{{ button_save }}" class="btn btn-primary">
+					<i class="fas fa-save"></i>
 				</button>
-				<a href="{{ cancel }}" data-toggle="tooltip" title="{{ button_cancel }}" class="btn btn-default">
-					<i class="fa fa-reply"></i>
+				<a href="{{ cancel }}" data-bs-toggle="tooltip" title="{{ button_cancel }}" class="btn btn-light">
+					<i class="fas fa-reply"></i>
 				</a>
 			</div>
 			<h1>{{ title }}</h1>
 			<ul class="breadcrumb">
 				{% for breadcrumb in breadcrumbs %}
-					<li>
+					<li class="breadcrumb-item">
 						<a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a>
 					</li>
 				{% endfor %}
@@ -24,41 +24,42 @@
 	<div class="container-fluid">
 		{% if error_warning %}
 			<div class="alert alert-danger alert-dismissible">
-				<i class="fa fa-exclamation-circle"></i>
+				<i class="fas fa-exclamation-circle"></i>
 				{{ error_warning }}
-				<button type="button" class="close" data-dismiss="alert">&times;</button>
+				<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
 			</div>
 		{% endif %}
 
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title">
-					<i class="fa fa-pencil"></i>
-					{{ text_edit }}</h3>
+		<div class="card">
+			<div class="card-header">
+				<i class="fa fa-pencil"></i>
+				{{ text_edit }}
 			</div>
-			<div class="panel-body">
-				<form action="{{ action }}" method="post" enctype="multipart/form-data" id="form-payment" class="form-horizontal">
+			<div class="card-body">
+				<form action="{{ action }}" method="post" enctype="multipart/form-data" id="form-payment" class="form-horizontal" >
 					<div class="tab-content">
 
-						<div class="form-group">
-							<label class="col-sm-2 control-label" for="input-status">{{ entry_status }}</label>
+						<div class="row mb-3">
+							<label class="col-sm-2 col-form-label" for="input-status">{{ entry_status }}</label>
 							<div class="col-sm-10">
-								<select name="payment_clickpay_status" id="input-status" class="form-control">
-									{% if payment_clickpay_status %}
-										<option value="1" selected="selected">{{ text_enabled }}</option>
-										<option value="0">{{ text_disabled }}</option>
-									{% else %}
-										<option value="1">{{ text_enabled }}</option>
-										<option value="0" selected="selected">{{ text_disabled }}</option>
-									{% endif %}
-								</select>
+								<div class="input-group">
+									<select name="payment_clickpay_status" id="input-status" class="form-select">
+										{% if payment_clickpay_status %}
+											<option value="1" selected="selected">{{ text_enabled }}</option>
+											<option value="0">{{ text_disabled }}</option>
+										{% else %}
+											<option value="1">{{ text_enabled }}</option>
+											<option value="0" selected="selected">{{ text_disabled }}</option>
+										{% endif %}
+									</select>
+								</div>
 							</div>
 						</div>
 
-						<div class="form-group">
-							<label class="col-sm-2 control-label" for="input-endpoint">{{ entry_endpoint }}</label>
+						<div class="row mb-3">
+							<label class="col-sm-2 col-form-label" for="input-endpoint">{{ entry_endpoint }}</label>
 							<div class="col-sm-10">
-								<select name="payment_clickpay_endpoint" id="input-endpoint" class="form-control">
+								<select name="payment_clickpay_endpoint" id="input-endpoint" class="form-select">
 									{% for key, title in endpoints %}
 										{% if key == payment_clickpay_endpoint %}
 											<option value="{{ key }}" selected="selected">{{ title }}</option>
@@ -73,8 +74,8 @@
 							</div>
 						</div>
 
-						<div class="form-group required">
-							<label class="col-sm-2 control-label" for="entry-profile-id">{{ entry_profile_id }}</label>
+						<div class="row mb-3 required">
+							<label class="col-sm-2 col-form-label" for="entry-profile-id">{{ entry_profile_id }}</label>
 							<div class="col-sm-10">
 								<input type="text" name="payment_clickpay_profile_id" value="{{ payment_clickpay_profile_id }}" placeholder="{{ entry_profile_id }}" id="entry-profile-id" class="form-control"/>
 								{% if error_profile_id %}
@@ -83,8 +84,8 @@
 							</div>
 						</div>
 
-						<div class="form-group required">
-							<label class="col-sm-2 control-label" for="entry-server-key">{{ entry_server_key }}</label>
+						<div class="row mb-3 required">
+							<label class="col-sm-2 col-form-label" for="entry-server-key">{{ entry_server_key }}</label>
 							<div class="col-sm-10">
 								<input type="text" name="payment_clickpay_server_key" value="{{ payment_clickpay_server_key }}" placeholder="{{ entry_server_key }}" id="entry-server-key" class="form-control"/>
 								{% if error_server_key %}
@@ -94,8 +95,8 @@
 						</div>
 
 						{% if method == 'valu' %}
-						<div class="form-group required">
-							<label class="col-sm-2 control-label" for="input-valu_product_id">{{ entry_valu_product_id }}</label>
+						<div class="row mb-3 required">
+							<label class="col-sm-2 col-form-label" for="input-valu_product_id">{{ entry_valu_product_id }}</label>
 							<div class="col-sm-10">
 								<input type="text" name="payment_clickpay_valu_product_id" value="{{ payment_clickpay_valu_product_id }}" placeholder="{{ entry_valu_product_id }}" id="input-valu_product_id" class="form-control"/>
 								{% if error_valu_product_id %}
@@ -105,19 +106,10 @@
 						</div>
 						{% endif %}
 
-						<div class="form-group">
-							<label class="col-sm-2 control-label" for="input-total">
-								<span data-toggle="tooltip" title="{{ help_total }}">{{ entry_total }}</span>
-							</label>
+						<div class="row mb-3">
+							<label class="col-sm-2 col-form-label" for="input-order-status">{{ entry_order_status }}</label>
 							<div class="col-sm-10">
-								<input type="text" name="payment_clickpay_total" value="{{ payment_clickpay_total }}" placeholder="{{ entry_total }}" id="input-total" class="form-control"/>
-							</div>
-						</div>
-
-						<div class="form-group">
-							<label class="col-sm-2 control-label" for="input-order-status">{{ entry_order_status }}</label>
-							<div class="col-sm-10">
-								<select name="payment_clickpay_order_status_id" id="input-order-status" class="form-control">
+								<select name="payment_clickpay_order_status_id" id="input-order-status" class="form-select">
 									{% for order_status in order_statuses %}
 										{% if order_status.order_status_id == payment_clickpay_order_status_id %}
 											<option value="{{ order_status.order_status_id }}" selected="selected">{{ order_status.name }}</option>
@@ -129,10 +121,10 @@
 							</div>
 						</div>
 
-						<div class="form-group">
-							<label class="col-sm-2 control-label" for="input-order-failed-status">{{ entry_order_failed_status }}</label>
+						<div class="row mb-3">
+							<label class="col-sm-2 col-form-label" for="input-order-failed-status">{{ entry_order_failed_status }}</label>
 							<div class="col-sm-10">
-								<select name="payment_clickpay_order_failed_status_id" id="input-order-failed-status" class="form-control">
+								<select name="payment_clickpay_order_failed_status_id" id="input-order-failed-status" class="form-select">
 									<option value="0">No Action</option>
 									{% for order_status in order_statuses %}
 										{% if order_status.order_status_id == payment_clickpay_order_failed_status_id %}
@@ -145,10 +137,10 @@
 							</div>
 						</div>
 
-						<div class="form-group">
-							<label class="col-sm-2 control-label" for="input-order-fraud-status">{{ entry_order_fraud_status }}</label>
+						<div class="row mb-3">
+							<label class="col-sm-2 col-form-label" for="input-order-fraud-status">{{ entry_order_fraud_status }}</label>
 							<div class="col-sm-10">
-								<select name="payment_clickpay_order_fraud_status_id" id="input-order-fraud-status" class="form-control">
+								<select name="payment_clickpay_order_fraud_status_id" id="input-order-fraud-status" class="form-select">
 									{% for order_status in order_statuses %}
 										{% if order_status.order_status_id == payment_clickpay_order_fraud_status_id %}
 											<option value="{{ order_status.order_status_id }}" selected="selected">{{ order_status.name }}</option>
@@ -159,11 +151,11 @@
 								</select>
 							</div>
 						</div>
-						
-						<div class="form-group">
-							<label class="col-sm-2 control-label" for="input-geo-zone">{{ entry_geo_zone }}</label>
+
+						<div class="row mb-3">
+							<label class="col-sm-2 col-form-label" for="input-geo-zone">{{ entry_geo_zone }}</label>
 							<div class="col-sm-10">
-								<select name="payment_clickpay_geo_zone_id" id="input-geo-zone" class="form-control">
+								<select name="payment_clickpay_geo_zone_id" id="input-geo-zone" class="form-select">
 									<option value="0">{{ text_all_zones }}</option>
 									{% for geo_zone in geo_zones %}
 										{% if geo_zone.geo_zone_id == payment_clickpay_geo_zone_id %}
@@ -176,17 +168,17 @@
 							</div>
 						</div>
 
-						<div class="form-group">
-							<label class="col-sm-2 control-label" for="input-sort-order">{{ entry_sort_order }}</label>
+						<div class="row mb-3">
+							<label class="col-sm-2 col-form-label" for="input-sort-order">{{ entry_sort_order }}</label>
 							<div class="col-sm-10">
-								<input type="text" name="payment_clickpay_sort_order" value="{{ payment_clickpay_sort_order }}" placeholder="{{ entry_sort_order }}" id="input-sort-order" class="form-control"/>
+								<input type="number" min="0" name="payment_clickpay_sort_order" value="{{ payment_clickpay_sort_order }}" placeholder="{{ entry_sort_order }}" id="input-sort-order" class="form-control"/>
 							</div>
 						</div>
 
-						<div class="form-group">
-							<label class="col-sm-2 control-label" for="input-hide_shipping">{{ entry_hide_shipping }}</label>
+						<div class="row mb-3">
+							<label class="col-sm-2 col-form-label" for="input-hide_shipping">{{ entry_hide_shipping }}</label>
 							<div class="col-sm-10">
-								<select name="payment_clickpay_hide_shipping" id="input-hide_shipping" class="form-control">
+								<select name="payment_clickpay_hide_shipping" id="input-hide_shipping" class="form-select">
 									{% if payment_clickpay_hide_shipping %}
 										<option value="1" selected="selected">{{ text_yes }}</option>
 										<option value="0">{{ text_no }}</option>
@@ -197,6 +189,40 @@
 								</select>
 							</div>
 						</div>
+
+						{% if support_iframe %}
+						<div class="row mb-3">
+							<label class="col-sm-2 col-form-label" for="input-iframe">{{ entry_iframe }}</label>
+							<div class="col-sm-10">
+								<select name="payment_clickpay_iframe" id="input-iframe" class="form-select">
+									{% if payment_clickpay_iframe %}
+										<option value="1" selected="selected">{{ text_yes }}</option>
+										<option value="0">{{ text_no }}</option>
+									{% else %}
+										<option value="1">{{ text_yes }}</option>
+										<option value="0" selected="selected">{{ text_no }}</option>
+									{% endif %}
+								</select>
+							</div>
+						</div>
+						{% endif %}
+
+						{% if is_card_payment %}
+						<div class="row mb-3">
+							<label class="col-sm-2 col-form-label" for="input-allow_associated_methods">{{ entry_allow_associated_methods }}</label>
+							<div class="col-sm-10">
+								<select name="payment_clickpay_allow_associated_methods" id="input-allow_associated_methods" class="form-select">
+									{% if payment_clickpay_allow_associated_methods %}
+										<option value="1" selected="selected">{{ text_yes }}</option>
+										<option value="0">{{ text_no }}</option>
+									{% else %}
+										<option value="1">{{ text_yes }}</option>
+										<option value="0" selected="selected">{{ text_no }}</option>
+									{% endif %}
+								</select>
+							</div>
+						</div>
+						{% endif %}
 
 					</div>
 
